--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -9,10 +9,10 @@ body {
   overflow-x: hidden;
 }
 
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
-  padding: 0;
-  margin: 0;
 }
 
 a {
