--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -15,10 +15,10 @@ body {
   box-sizing: border-box;
 }
 
-a {
+/* a {
   color: inherit;
   text-decoration: none;
-}
+} */
 
 .imgDark {
   display: none;
